[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/station_menu/station_menu.gd" type="Script" id=1]

[node name="StationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 10

[node name="LabelStationName" type="Label" parent="Panel/VBoxContainer"]
margin_right = 360.0
margin_bottom = 14.0
text = "Station Name"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 360.0
margin_bottom = 28.0

[node name="BtnTrade" type="Button" parent="Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 360.0
margin_bottom = 58.0
text = "Trade"

[node name="BtnContracts" type="Button" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 360.0
margin_bottom = 88.0
text = "Contracts"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 98.0
margin_right = 360.0
margin_bottom = 102.0

[node name="BtnUndock" type="Button" parent="Panel/VBoxContainer"]
margin_top = 112.0
margin_right = 360.0
margin_bottom = 132.0
text = "Undock"
